fix(text-field): Fixes input text alignment on IE11 for densed text field

--- a/packages/mdc-textfield/_variables.scss
+++ b/packages/mdc-textfield/_variables.scss
@@ -91,4 +91,7 @@ $mdc-text-field-outlined-dense-with-leading-icon-label-position-x: 21px !default
 $mdc-text-field-textarea-label-position-y: 130% !default;
 $mdc-text-field-helper-line-padding: 16px !default;
 $mdc-text-field-input-padding: 16px !default;
+$mdc-text-field-input-padding-top: 20px !default;
+$mdc-text-field-input-padding-bottom: 6px !default;
+$mdc-text-field-input-border-bottom: 1px !default;
 // Note that the scale factor is an eyeballed approximation of what's shown in the mocks.
